--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -14,3 +14,9 @@ jobs:
     steps:
       - run: echo $GITHUB_SHA
 
+  job2:
+    needs:
+      - job1
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo ${{ github.event.pull_request.head.sha }}
