--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -14,3 +14,14 @@ jobs:
     steps:
       - run: echo $GITHUB_SHA
 
+  job2:
+    if: github.event.pull_request.merged == true
+    needs:
+      - job1
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+        if ${{ contains( github.evnent.pull_request.labels.*.name, 'sample-label' ) }}; then
+          echo 'sample-label'
+        fi
+
