--- a/.github/workflows/workflow_call.yml
+++ b/.github/workflows/workflow_call.yml
@@ -6,7 +6,7 @@ on:
       sample:
         type: string
         required: true
-        default: "aaaa"
+        default: "aaaaa"
 
 jobs:
   hello:
